--- a/semestr2/.vscode/settings.json
+++ b/semestr2/.vscode/settings.json
@@ -46,6 +46,7 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "cstring": "cpp",
-        "ctime": "cpp"
+        "ctime": "cpp",
+        "fstream": "cpp"
     }
 }
