--- a/semestr2/.vscode/settings.json
+++ b/semestr2/.vscode/settings.json
@@ -47,6 +47,7 @@
         "typeinfo": "cpp",
         "cstring": "cpp",
         "ctime": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "list": "cpp"
     }
 }
