--- a/semestr2/.vscode/settings.json
+++ b/semestr2/.vscode/settings.json
@@ -48,6 +48,7 @@
         "cstring": "cpp",
         "ctime": "cpp",
         "fstream": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "bitset": "cpp"
     }
 }
